<resources>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="content"> Hi, this is a new Netology! Once upon a time, Netology began with intensive courses in online marketing. Then there were courses in design, development, analytics and management. We grow ourselves and help students grow: from beginners to confident professionals. But the most important thing remains with us: we believe that everyone already has the power that makes them want more, aim higher, run faster. Our mission is to help us embark on the path of growth and start a chain of changes → http://netolo.gy/fyb</string>
    <string name="author"> Netology. University of Internet Professions of the Future</string>
    <string name="published"> 21 may at 18:36</string>
    <string name="liked">0</string>
    <string name="shared">0</string>
    <string name="viewed">0</string>
    <string name="app_name">Nmedia</string>
    <string name="nmedia">Nmedia!</string>
    <string name="description_post_cancel">Cancel</string>
    <string name="edit_message">Edit Message</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="video_link">Video link</string>
    <string name="add_post">Add post</string>
    <string name="play">play</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_new_post">User %1$s posted New Post </string>
    <string name="notification_else">Action %1$s not allowed in this version \n Update your application</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
</resources>
